--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
                 transform: scale(1.25); }
       .header__menu__top__notification span {
         font-size: 10px;
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         position: absolute;
         top: -14px;
         right: -2px;
@@ -117,7 +117,7 @@
           -ms-flex-direction: column;
               flex-direction: column; }
       .sidebar__profile__info__name {
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-size: 13px;
         color: #FFFFFF; }
         .sidebar__profile__info__name img {
@@ -130,7 +130,7 @@
             -webkit-transform: scale(1.5);
                     transform: scale(1.5); }
       .sidebar__profile__info__followers {
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-size: 11px;
         font-weight: bold;
         color: rgba(0, 0, 0, 0.3); }
@@ -159,7 +159,7 @@
           -ms-flex-align: center;
               align-items: center;
       border: 0.5px solid rgba(0, 0, 0, 0);
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-size: 14px;
       color: #FFFFFF;
       border-radius: 5px; }
@@ -187,7 +187,7 @@
             justify-content: center;
     height: 13%; }
     .sidebar__footer__item {
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-style: normal;
       font-weight: normal;
       line-height: normal;
@@ -245,7 +245,7 @@
               align-items: center;
       margin-bottom: 10px; }
       .main__header__top__login {
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: bold;
         line-height: normal;
@@ -257,7 +257,7 @@
         border: 1px solid #1CAF5E;
         border-radius: 7px;
         padding: 13px 20px;
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: normal;
         line-height: normal;
@@ -273,7 +273,7 @@
         border: 2px solid rgba(0, 0, 0, 0);
         padding: 0;
         padding-bottom: 10px;
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: normal;
         line-height: normal;
@@ -310,7 +310,7 @@
         top: 20px;
         left: 20px; }
       .main__dashboard__item__tile__number__num {
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: bold;
         line-height: normal;
@@ -322,7 +322,7 @@
         top: 55px;
         left: 15px; }
       .main__dashboard__item__tile__number__text {
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: normal;
         line-height: normal;
@@ -337,7 +337,7 @@
       .main__dashboard__item__tile__change {
         -ms-flex-item-align: end;
             align-self: flex-end;
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: normal;
         line-height: normal;
@@ -363,7 +363,7 @@
             -ms-flex-direction: column;
                 flex-direction: column; }
         .main__dashboard__item__info__text__social {
-          font-family: Roboto;
+          font-family: Roboto, sans-serif;
           font-style: normal;
           font-weight: normal;
           line-height: normal;
@@ -372,7 +372,7 @@
           mix-blend-mode: normal;
           opacity: 0.5; }
         .main__dashboard__item__info__text__login {
-          font-family: Roboto;
+          font-family: Roboto, sans-serif;
           font-style: normal;
           font-weight: normal;
           line-height: normal;
@@ -383,7 +383,7 @@
 .invite_friends,
 .settings,
 .log_out p {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: bold;
   line-height: normal;
@@ -432,21 +432,21 @@
   z-index: 5;
   padding: 20px 20px; }
   .modal_form__name {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: bold;
     line-height: 17px;
     font-size: 18px;
     color: #4F4F4F; }
   .modal_form__info {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: normal;
     line-height: 17px;
     font-size: 14px;
     color: #4F4F4F; }
   .modal_form__url {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: bold;
     line-height: 17px;
@@ -461,35 +461,35 @@
     display: block;
     margin-bottom: 20px; }
     .modal_form__input::-webkit-input-placeholder {
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-style: normal;
       font-weight: normal;
       line-height: normal;
       font-size: 14px;
       color: #B6B6B6; }
     .modal_form__input:-ms-input-placeholder {
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-style: normal;
       font-weight: normal;
       line-height: normal;
       font-size: 14px;
       color: #B6B6B6; }
     .modal_form__input::-ms-input-placeholder {
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-style: normal;
       font-weight: normal;
       line-height: normal;
       font-size: 14px;
       color: #B6B6B6; }
     .modal_form__input::placeholder {
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-style: normal;
       font-weight: normal;
       line-height: normal;
       font-size: 14px;
       color: #B6B6B6; }
   .modal_form__button {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: normal;
     line-height: normal;
