--- a/css/style.scss
+++ b/css/style.scss
@@ -35,7 +35,7 @@
                 }
                 & span{
                     font-size: 10px;
-                    font-family: Roboto;
+                    font-family: Roboto, sans-serif;
                     position: absolute;
                     top: -14px;
                     right: -2px;
@@ -94,7 +94,7 @@
              display: flex;
              flex-direction: column;
              &__name{
-                font-family: Roboto;
+                font-family: Roboto, sans-serif;
                 font-size: 13px;
                 color: #FFFFFF;
                 & img{
@@ -108,7 +108,7 @@
                 }
              }
              &__followers{
-                font-family: Roboto;
+                font-family: Roboto, sans-serif;
                 font-size: 11px;
                 font-weight: bold;
                 color: rgba(0, 0, 0, 0.3);
@@ -129,7 +129,7 @@
             padding: 13px;
             align-items: center;
             border: 0.5px solid rgba(0, 0, 0, 0);
-            font-family: Roboto;
+            font-family: Roboto, sans-serif;
             font-size: 14px;
             color: #FFFFFF;
             border-radius: 5px;
@@ -152,7 +152,7 @@
          justify-content: center;
          height: 13%;
          &__item{
-             font-family: Roboto;
+             font-family: Roboto, sans-serif;
              font-style: normal;
              font-weight: normal;
              line-height: normal;
@@ -198,7 +198,7 @@
             align-items: center;
             margin-bottom: 10px;
             &__login{
-                font-family: Roboto;
+                font-family: Roboto, sans-serif;
                 font-style: normal;
                 font-weight: bold;
                 line-height: normal;
@@ -212,7 +212,7 @@
                 border: 1px solid #1CAF5E;
                 border-radius: 7px;
                 padding: 13px 20px;
-                font-family: Roboto;
+                font-family: Roboto, sans-serif;
                 font-style: normal;
                 font-weight: normal;
                 line-height: normal;
@@ -231,7 +231,7 @@
                 border: 2px solid rgba(0, 0, 0, 0);
                 padding: 0;
                 padding-bottom: 10px;
-                font-family: Roboto;
+                font-family: Roboto, sans-serif;
                 font-style: normal;
                 font-weight: normal;
                 line-height: normal;
@@ -269,7 +269,7 @@
                 &__number{
                     
                     &__num{
-                        font-family: Roboto;
+                        font-family: Roboto, sans-serif;
                         font-style: normal;
                         font-weight: bold;
                         line-height: normal;
@@ -282,7 +282,7 @@
                         left: 15px;
                     }
                     &__text{
-                        font-family: Roboto;
+                        font-family: Roboto, sans-serif;
                         font-style: normal;
                         font-weight: normal;
                         line-height: normal;
@@ -298,7 +298,7 @@
                 }
                 &__change{
                     align-self: flex-end;
-                    font-family: Roboto;
+                    font-family: Roboto, sans-serif;
                     font-style: normal;
                     font-weight: normal;
                     line-height: normal;
@@ -320,7 +320,7 @@
                     display: flex;
                     flex-direction: column;
                     &__social{
-                        font-family: Roboto;
+                        font-family: Roboto, sans-serif;
                         font-style: normal;
                         font-weight: normal;
                         line-height: normal;
@@ -331,7 +331,7 @@
                         opacity: 0.5;
                     }
                     &__login{
-                        font-family: Roboto;
+                        font-family: Roboto, sans-serif;
                         font-style: normal;
                         font-weight: normal;
                         line-height: normal;
@@ -349,7 +349,7 @@
 .invite_friends,
 .settings,
 .log_out p {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: bold;
     line-height: normal;
@@ -402,7 +402,7 @@
 	z-index: 5; 
     padding: 20px 20px;
     &__name{
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: bold;
         line-height: 17px;
@@ -410,7 +410,7 @@
         color: #4F4F4F;
     }
     &__info{
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: normal;
         line-height: 17px;
@@ -418,7 +418,7 @@
         color: #4F4F4F;
     }
     &__url{
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: bold;
         line-height: 17px;
@@ -434,7 +434,7 @@
         display: block;
         margin-bottom: 20px;
         &::placeholder{
-            font-family: Roboto;
+            font-family: Roboto, sans-serif;
             font-style: normal;
             font-weight: normal;
             line-height: normal;
@@ -443,7 +443,7 @@
         }
     }
     &__button{
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: normal;
         line-height: normal;
